fix(style): prevent `.popup` to appear behind `.date-heading`

--- a/style.css
+++ b/style.css
@@ -293,6 +293,7 @@ body > header > h1 {
 
 .popup {
 	position: absolute;
+	z-index: 2; /* Put it above everything else. */
 	right: 0;
 	background-color: var(--background-color);
 	border: solid var(--border-width) var(--border-color);
